# logamizer

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
apps/api/: __init__.py  config.py  database.py  dependencies.py  main.py
apps/api/models/: __init__.py  aggregate.py  error_log.py  finding.py  job.py  log_file.py  log_source.py  site.py  user.py
apps/api/routers/: __init__.py  aggregates.py  auth.py  errors.py  explain.py  finding_actions.py  findings.py  jobs.py  log_sources.py  ollama.py  sites.py  uploads.py  utils.py
apps/api/schemas/: __init__.py  aggregate.py  auth.py  error_log.py  explain.py  finding.py  job.py  log_file.py  log_source.py  site.py  user.py
apps/api/services/: __init__.py  auth.py  ollama.py  storage.py
apps/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/frontend/src/: App.module.css  App.tsx  main.tsx  types.ts
apps/worker/: __init__.py  celery_app.py
apps/worker/fetchers/: __init__.py  base.py  s3.py  ssh.py
apps/worker/parsers/: __init__.py  apache.py  base.py  error_parser.py  nginx.py
apps/worker/tasks/: __init__.py  error_analysis.py  fetch.py  parse.py  scheduler.py
docs/: parsing.md
infra/: Dockerfile.api  Dockerfile.nginx  Dockerfile.worker  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.nogpu.yml  docker-compose.yml
infra/migrations/: alembic.ini  env.py
infra/nginx/: nginx.conf
scripts/: demo.sh  setup.sh
tests/: __init__.py  conftest.py
(+78 files in other folders)
